# sidrobus

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.streamlit/: config.toml
scripts/: filter_altitude.py  kml_to_csv.py  preprocess_matlab_csv.py
sidrobus/: constants.py  route.py  unit_conversions.py
sidrobus/bus/: __init__.py  bus.py  bus_models.py
sidrobus/bus/emissions_standard/: __init__.py  emissions_standard.py  euro_standards.py
sidrobus/bus/engine/: __init__.py  abstract_engine.py  electric_engine.py  fuel_engine.py
sidrobus/preprocessing/: __init__.py  filter_altitude.py  kml_to_dataframe.py  preprocess_matlab_csv.py
tests/: test_single_trip.py
web_app/: Sidrobus.py  app.py  interactive_plotting.py  map_plotting.py
web_app/pages/: Preprocessing.py  Trip_Simulation.py
