[project]
name = "sidrobus"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Castaño Rodríguez",email = "UO288241@uniovi.es"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"

[tool.ruff]
line-length = 88
lint.select = [
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear - common bugs and anti-patterns
    "C90", # McCabe complexity
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "NPY", # flake8-numpy
    "PL",  # pylint
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "RUF", # ruff-specific, import optimization and other inefficiencies
    "SIM", # flake8-simplify
    "UP",  # pyupgradej
    "W",   # pycodestyle
    "ANN", # flake8-annotations - Consistent type annotations
    "D",   # pydocstyle
    "EM",  # flake8-errmsg
    "ERA", # flake8-eradicate - remove commented out code
    "PT",  # flake8-pytest-style
    "S",   # flake8-bandit - security checks
    "SLF", # flake8-self - private member access
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # Disable assert statement prohibition in tests

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
